added query string for pan/vw

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li><a ui-sref="CnA">Create Account</a></li>
                         <li><a ui-sref="CnPE">Create PancardEntites</a></li>
                         <li><a ui-sref="VwA">View Account</a></li>
-                        <li><a ui-sref="VwPE">View PancardEntites</a></li>
+                      <!--  <li><a ui-sref="VwPE">View PancardEntites</a></li>-->
                     </ul>
                 </li>
             </ul>
